# turing-machine-simulator

./: .gitignore  CMakeLists.txt  PROPOSAL.md  README.md  default.profraw
apps/: cinder_app_main.cc
docs/: PROPOSAL.md
include/: direction.h  state.h  turing_machine.h  turing_machine_simulator_app.h  turing_machine_simulator_helper.h  turing_machine_simulator_helper_methods.h
src/: direction.cc  state.cc  turing_machine.cc  turing_machine_simulator_app.cc  turing_machine_simulator_helper.cc  turing_machine_simulator_helper_methods.cc
tests/: test_direction.cc  test_state.cc  test_turing_machine.cc  test_turing_machine_simulator_helper_methods.cc
